Fixing overflow on cell with long words.

--- a/demo/main.css
+++ b/demo/main.css
@@ -70,7 +70,6 @@
     font-size: 14px;
     height: 38px;
     line-height: 20px;
-    max-width: 128px;
     min-height: 32px;
     padding: 8px 10px;
     text-align: start;
@@ -141,7 +140,8 @@
 
 .table-manager-block {
   background-color: #fff;
-  padding: 1rem 0; }
+  padding: 1rem 0;
+  overflow: hidden; }
   .table-manager-block__wrapper {
     display: inline-block; }
   .table-manager-block__title {
@@ -161,7 +161,6 @@
     font-size: 14px;
     height: 38px;
     line-height: 20px;
-    max-width: 128px;
     min-height: 32px;
     padding: 8px 10px;
     text-align: start;
